add history of added cars data

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html data-theme="lemonade" lang="en">
+<html class="scrollbar scrollbar-track-amber-100 scrollbar-thumb-zinc-400" data-theme="lemonade" lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/car-rental.png" />
